# router/admin.go
@@ -7,20 +7,6 @@ import (
 	"net/http"
 )
 
-var (
-	v1PostRouter = map[string]gin.HandlerFunc{
-	}
-
-	v1DeleteRouter = map[string]gin.HandlerFunc{
-	}
-
-	v1PutRouter = map[string]gin.HandlerFunc{
-	}
-
-	v1GetRouter = map[string]gin.HandlerFunc{
-	}
-)
-
 func initAdminRouter(r *gin.Engine) {
 	// 后台管理系统
 	r.GET(config.Admin.App.ApiPrefix+"/admin", func(context *gin.Context) {
@@ -28,25 +14,27 @@ func initAdminRouter(r *gin.Engine) {
 			"title":config.Admin.App.Name,
 		})
 	})
-	r.GET(config.Admin.App.ApiPrefix+"/api/v1", v1.V1)
-	r.GET(config.Admin.App.ApiPrefix+"/api/v1/captcha",v1.GetCaptcha)
+
+	api := r.Group("/api")
+
+	apiV1 := api.Group("/v1")
+	{
+		// 系统版本
+		apiV1.GET("", v1.V1)
+		// 系统登陆相关
+		apiV1Login := apiV1.Group("/login")
+		{
+			// 获取验证码ID  /api/v1/login/captchaId
+			apiV1Login.GET("captchaId",v1.GetCaptchaId)
+			// 获取验证码图片 /api/v1/login/captcha
+			apiV1Login.GET("captcha",v1.ResCaptcha)
+			// 登陆  /api/v1/login
+			apiV1Login.POST("",v1.Login)
+		}
+	}
+
+
 	//r.POST(config.Admin.App.ApiPrefix+"/api/admin/getAccessToken", v1.GetAccessToken)
 
-	groupV1 := r.Group(config.Admin.App.ApiPrefix + "/api/v1")
 
-	for path, f := range v1GetRouter {
-		groupV1.GET(path, f)
-	}
-
-	for path, f := range v1PostRouter {
-		groupV1.POST(path, f)
-	}
-
-	for path, f := range v1DeleteRouter {
-		groupV1.DELETE(path, f)
-	}
-
-	for path, f := range v1PutRouter {
-		groupV1.PUT(path, f)
-	}
 }
